# led_fft

./: .gitignore  Cargo.toml  README.md
arduino/: PcAudio.ino  arc-ch340.sh
src/: config.rs  context.rs  fft_processor.rs  input_source.rs  led_serial.rs  main.rs  parametrization.rs  window_buffer.rs
src/core/: config.rs  context.rs  fft_processor.rs  mod.rs  parametrization.rs
src/input/: cpal.rs  mod.rs  pulse.rs
src/operator/: avg_normalizer.rs  bin_weights.rs  min_normalizer.rs  mod.rs  tracking_smoother.rs
src/operator/filter/: high.rs  mod.rs
src/operator/normalizer/: abs.rs  avg.rs  mod.rs
src/operator/scaler/: bins.rs  mod.rs  ranges.rs  uniform.rs
src/operator/smoother/: mod.rs
src/output/: mod.rs  serial.rs  text.rs
src/sound/: cpal.rs  mod.rs  pulse.rs
src/util/: mod.rs  normalizer.rs  running_average.rs  scaler.rs  smoother.rs  top_counter.rs  utils.rs  window_buffer.rs
